[gd_scene load_steps=5 format=3 uid="uid://b70u6t0c2v85g"]

[ext_resource type="Script" path="res://Menu/script/interface.gd" id="1_w8lmc"]
[ext_resource type="PackedScene" path="res://Menu/scene/setting_panel.tscn" id="2_mx7yq"]

[sub_resource type="SystemFont" id="SystemFont_wjjbb"]
subpixel_positioning = 0

[sub_resource type="Theme" id="Theme_bi6jg"]
default_font = SubResource("SystemFont_wjjbb")

[node name="title_interface" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.00333
script = ExtResource("1_w8lmc")
metadata/_edit_use_anchors_ = true

[node name="box_listing_level" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 18.0
offset_top = 19.0
offset_right = 218.0
offset_bottom = 245.0
size_flags_horizontal = 0
theme_override_constants/separation = 3

[node name="Label" type="Label" parent="box_listing_level"]
layout_mode = 2
text = "LES PLANETES"
horizontal_alignment = 1

[node name="box_descrition" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -272.0
offset_top = 19.0
offset_right = -19.0
offset_bottom = 219.0
grow_horizontal = 0

[node name="Title" type="Label" parent="box_descrition"]
layout_mode = 2
horizontal_alignment = 1

[node name="description" type="Label" parent="box_descrition"]
layout_mode = 2
text = "
"
autowrap_mode = 2

[node name="button_GO" type="Button" parent="box_descrition"]
visible = false
layout_mode = 2
text = "Vers l'infini et l'au del√† !"

[node name="name" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -291.0
offset_top = -44.0
offset_right = -19.0
offset_bottom = -18.0
grow_horizontal = 0
grow_vertical = 0
text = "LE SUPER JEU DE LA MORT QUI TUE "

[node name="button_quitter" type="Button" parent="."]
layout_mode = 2
offset_left = 27.0
offset_top = 540.0
offset_right = 280.0
offset_bottom = 571.0
grow_vertical = 0
theme = SubResource("Theme_bi6jg")
text = "QUITTER"

[node name="button_option_setting" type="Button" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 498.0
offset_right = 279.0
offset_bottom = 529.0
theme = SubResource("Theme_bi6jg")
text = "OPTION"

[node name="setting_panel" parent="." instance=ExtResource("2_mx7yq")]
visible = false
layout_mode = 1

[connection signal="pressed" from="box_descrition/button_GO" to="." method="_on_button_go_pressed"]
[connection signal="pressed" from="button_quitter" to="." method="_on_button_quitter_pressed"]
[connection signal="pressed" from="button_option_setting" to="." method="_on_button_option_setting_pressed"]
